# faerber

./: .all-contributorsrc  .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  cargo-sha256  flake.nix  rust-toolchain.toml
.cargo/: config
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml  dockerfile.yaml
app/: Cargo.toml
app/src/: main.rs
benches/: main_benchmark.rs
colorschemes/: Cargo.toml
colorschemes/src/: lib.rs
discord_bot/: Cargo.toml  Dockerfile
discord_bot/src/: main.rs
dither/: .gitignore  Cargo.toml  LICENSE
dither/src/: ditherer.rs  error.rs  img.rs  lib.rs  prelude.rs  tests.rs
dither/src/color/: mod.rs  rgb.rs
dither/src/color/palette/: cga.rs  crayon.rs  mod.rs  tests.rs
faerber/: Cargo.toml
faerber/palettes/: dracula.json  gruvbox.json
faerber/src/: lib.rs  library.rs  main.rs
faerber_lib/: Cargo.toml
faerber_lib/benches/: main_benchmark.rs
faerber_lib/src/: custom_lab.rs  lib.rs
faerber_rs/: .gitignore  Cargo.toml  rust-toolchain.toml
faerber_rs/.cargo/: config
faerber_rs/src/: lib.rs  old_main.rs
native/: Cargo.toml
native/palettes/: catppuccin.json  nord.json  solarized.json
native/src/: colour_library.rs  colours.json  gui.rs  library.rs  main.rs
scripts/: colorschemes.json  convert.jq  update.sh
src/: custom_lab.rs  lib.rs  main.rs
