[package]
name = "faerber-app"
version = "0.1.0"
edition = "2021"

[dependencies]
colorschemes = { path = "../colorschemes" }
css-color = "0.2.4"
egui = "0.21.0"
catppuccin-egui = "2.0"
image = "0.24.5"
egui_file = "0.8.0"
rfd = "0.11.1"
faerber = { path = "../faerber" }
faerber_lib = { path = "../faerber_lib" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
sublime_fuzzy = "0.7.0"

[dependencies.eframe]
version = "0.21.3"
features = ["__screenshot", "dark-light"]

[dependencies.egui_extras]
version = "0.21.0"
default-features = false
features = ["image", "svg"]
