[package]
name = "faerber-app"
version = "0.1.0"
edition = "2021"

[dependencies]
catppuccin-egui = "2.0"
colorschemes.workspace = true
css-color.workspace = true
egui = "0.21.0"
egui_file = "0.8.0"
faerber.workspace = true
faerber_lib.workspace = true
image.workspace = true
rfd = "0.11.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sublime_fuzzy = "0.7.0"

[dependencies.eframe]
version = "0.21.3"
features = ["__screenshot", "dark-light"]

[dependencies.egui_extras]
version = "0.21.0"
default-features = false
features = ["image", "svg"]
