[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
faerber = { path = "../faerber" }
faerber_lib = { path = "../faerber_lib" }
image = "0.24.5"
phf = { version = "0.11.1", features = ["macros"] }
poise = "0.5.2"

[dependencies.reqwest]
version = "0.11.14"
features = ["blocking"]

[dependencies.serenity]
version = "0.11.5"
default_features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "1.25.0"
features = ["macros", "rt-multi-thread"]
