[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
faerber = { path = "../faerber" }
faerber_lib = { path = "../faerber_lib" }
image.workspace = true
oxipng.workspace = true
phf = { version = "0.11.1", features = ["macros"] }
poise = "0.5.2"
sha2 = "0.10.6"

[dependencies.reqwest]
version = "0.11.14"
features = ["blocking"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "native_tls_backend", "model"]

[dependencies.tokio]
version = "1.25.0"
features = ["macros", "rt-multi-thread"]
