[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
colorschemes.workspace = true
faerber = { path = "../faerber" }
faerber_lib = { path = "../faerber_lib" }
image.workspace = true
oxipng.workspace = true
phf = { version = "0.11.1", features = ["macros"] }
poise = "0.5.2"
sha2 = "0.10.6"

[dependencies.reqwest]
version = "0.11.14"
default-features = false
features = ["rustls-tls"]

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "model", "rustls_backend"]

[dependencies.tokio]
version = "1.25.0"
features = ["macros", "rt-multi-thread"]
