[package]
name = "dither"
version = "1.3.10"

authors = ["Efron Licht <efron.python@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A ditherer for static images with a variety of color palettes"
repository= "https://gitlab.com/efronlicht/dither"
readme = "readme.md"
[dependencies]
image = "0.24.5"
[dev-dependencies]
