[package]
name = "dither"
version = "1.3.10"

authors = ["Efron Licht <efron.python@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A ditherer for static images with a variety of color palettes"
repository = "https://gitlab.com/efronlicht/dither"
readme = "readme.md"

[dependencies]
image.workspace = true
