[package]
name = "faerber"
version = "0.2.0"
edition = "2021"
authors = ["winston <hey@winston.sh>"]
license = "MIT"
homepage = "https://farbenfroh.io"
repository = "https://github.com/farbenfroh/faerber_rs"
default-run = "faerber"

[[bin]]
name = "faerber"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.23", features = ["cargo", "derive"] }
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
lazy_static = "1.4.0"
faerber_lib = { path = "../faerber_lib" }
image = "0.24.1"
