[package]
name = "faerber"
version = "0.2.0"
edition = "2021"
authors = ["winston <hey@winston.sh>"]
license = "MIT"
homepage = "https://farbenfroh.io"
repository = "https://github.com/farbenfroh/faerber_rs"
default-run = "faerber"

[[bin]]
name = "faerber"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.1", features = ["cargo", "derive", "string"] }
colorschemes = { path = "../colorschemes" }
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
lazy_static = "1.4.0"
faerber_lib = { path = "../faerber_lib" }
image = "0.24.1"
oxipng = "8.0.0"
clap_complete = "4.2.0"
dither = { git = "https://github.com/nekowinston/dither", version = "1.3.10" }
