[package]
name = "faerber"
version = "0.2.0"
edition = "2021"
authors = ["winston <hey@winston.sh>"]
license = "MIT"
homepage = "https://farbenfroh.io"
repository = "https://github.com/farbenfroh/faerber_rs"
default-run = "faerber"

[[bin]]
name = "faerber"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.1", features = ["cargo", "derive", "string"] }
clap_complete = "4.2.0"
colorschemes.workspace = true
dither.workspace = true
faerber_lib.workspace = true
image.workspace = true
lazy_static.workspace = true
oxipng.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
