[package]
name = "faerber_lib"
version = "0.2.0"
edition = "2021"

[dependencies]
base64 = "0.13.1"
css-color = "0.2.4"
deltae = "0.3.0"
image = "0.24.5"
lab = "0.11.0"
rayon = "1.5.3"
quick-xml = "0.26.0"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "main_benchmark"
harness = false
