[package]
name = "faerber_lib"
version = "0.2.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
css-color.workspace = true
deltae.workspace = true
dither.workspace = true
image.workspace = true
lab = "0.11.0"
quick-xml = "0.28.2"
rayon = "1.5.3"
thiserror = "1.0"
strum.workspace = true

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "main_benchmark"
harness = false
