[package]
name = "faerber"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
deltae = "0.3.0"
image = "0.24.1"
lab = "0.11.0"
rayon = "1.5.2"

[profile.release]
lto = true
opt-level= 3

[dev-dependencies]
criterion = "0.1.2"

[[bench]]
name = "main_benchmark"
harness = false
