[package]
name = "faerber_native"
version = "0.1.0"
edition = "2021"
authors = ["winston <hey@winston.sh>"]
license = "MIT"
homepage = "https://farbenfroh.io"
repository = "https://github.com/farbenfroh/faerber_rs"
default-run = "faerber-cli"

[[bin]]
name = "faerber-cli"
path = "src/main.rs"

[profile.release]
lto = true
opt-level= 3

[dependencies]
clap = { version = "4.0.23", features = ["cargo", "derive"] }
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
lazy_static = "1.4.0"
faerber = { path = ".." }
image = "0.24.1"
